--- a/.github/workflows/decode_atis.yml
+++ b/.github/workflows/decode_atis.yml
@@ -1,4 +1,4 @@
-name: Format ATIS FMS
+name: Format ATIS FMS complet avec METAR
 
 on:
   workflow_dispatch:
@@ -19,13 +19,12 @@ jobs:
           sudo apt-get install -y python3 python3-pip
           pip install requests
 
-      - name: Générer ATIS format FMS
+      - name: Générer ATIS format FMS complet
+        env:
+          METAR_API_TOKEN: ${{ secrets.METAR_API_TOKEN }}
         run: |
           python3 <<'PYCODE'
-          import re
-          import os
-          import sys
-          from datetime import datetime
+          import re, os, sys, requests
 
           input_file = "atis_tallinn.txt"
           output_file = "atis_tallinn_fms.txt"
@@ -37,30 +36,75 @@ jobs:
           with open(input_file, "r", encoding="utf-8") as f:
               raw = f.read()
 
-          # Fonctions utilitaires
+          # --- Fonctions utilitaires ---
           def extract(pattern, text, default="XXX"):
               match = re.search(pattern, text, re.IGNORECASE)
               return match.group(1).strip() if match else default
 
-          def extract_float(pattern, text, default="XXX"):
-              match = re.search(pattern, text, re.IGNORECASE)
-              return f"{float(match.group(1)):.0f}" if match else default
+          def fetch_metar():
+              token = os.environ.get("METAR_API_TOKEN")
+              if not token:
+                  print("⚠️ METAR_API_TOKEN non défini, validation désactivée")
+                  return {}
+              try:
+                  url = f"https://avwx.rest/api/metar/EETN?options=info&format=json&token={token}"
+                  r = requests.get(url, timeout=10)
+                  if r.status_code == 200:
+                      data = r.json()
+                      return {
+                          "wind_dir": int(data.get("wind_direction", {}).get("value", 0)),
+                          "wind_speed": int(data.get("wind_speed", {}).get("value", 0)),
+                          "visibility": int(data.get("visibility", {}).get("value", 0)),
+                          "altimeter": int(data.get("altimeter", {}).get("value", 0)),
+                          "temperature": float(data.get("temperature", {}).get("value", 0)),
+                          "dewpoint": float(data.get("dewpoint", {}).get("value", 0))
+                      }
+              except Exception as e:
+                  print(f"⚠️ Erreur récupération METAR: {e}")
+              return {}
 
-          # Extraire données ATIS
+          def validate(data, metar):
+              try:
+                  # Vent
+                  if data["wind"] != "XXX" and metar:
+                      dir_deg, speed = map(int, re.findall(r"\d+", data["wind"]))
+                      if abs(dir_deg - metar["wind_dir"]) > 20 or abs(speed - metar["wind_speed"]) > 10:
+                          data["wind"]="XXX"
+                  # Visibilité
+                  if data["visibility"] != "XXX" and metar:
+                      vis = int(re.findall(r"\d+", data["visibility"])[0])
+                      if abs(vis - metar["visibility"]) > 2:
+                          data["visibility"]="XXX"
+                  # Temp / Dew
+                  if data["temperature"] != "XXX" and metar:
+                      at = int(data["temperature"])
+                      dp = int(data["dewpoint"])
+                      if abs(at - metar["temperature"]) > 3 or abs(dp - metar["dewpoint"]) > 3:
+                          data["temperature"]="XXX"; data["dewpoint"]="XXX"
+                  # QNH
+                  if data["qnh"] != "XXX" and metar:
+                      if abs(int(data["qnh"]) - metar["altimeter"]) > 5:
+                          data["qnh"]="XXX"
+              except:
+                  for key in ["wind","visibility","temperature","dewpoint","qnh"]:
+                      data[key]="XXX"
+              return data
+
+          # --- Extraire données ATIS ---
           atis_letter = extract(r"[iI]nformation\s+([A-Z])", raw)
           atis_time = extract(r"[tT]ime\s+(\d{3,4})", raw)
 
           # Vent
           wind_dir = extract(r"[wW]ind.*?(\d{1,3})\s*degrees", raw)
           wind_speed = extract(r"[wW]ind.*?(\d{1,3})\s*knots", raw)
-          wind = f"{wind_dir}°{wind_speed}KT" if wind_dir != "XXX" and wind_speed != "XXX" else "XXX"
+          wind = f"{wind_dir}°{wind_speed}KT" if wind_dir!="XXX" and wind_speed!="XXX" else "XXX"
 
-          # Visibilité en km
+          # Visibilité km
           visibility = extract(r"[vV]isibility.*?(\d+)\s*(?:km|kilometers|metres|litres)", raw)
-          visibility = f"{visibility}KM" if visibility != "XXX" else "XXX"
+          visibility = f"{visibility}KM" if visibility!="XXX" else "XXX"
 
-          # Nuages
-          cloud_matches = re.findall(r"(overcast|scatter|few|broken)[ ,]*(\d+)[ ]*feet", raw, re.IGNORECASE)
+          # Nuages multiples
+          cloud_matches = re.findall(r"(overcast|broken|few|scattered|bkn|sct|ovc)[ ,]*(\d+)[ ]*feet", raw, re.IGNORECASE)
           clouds = " ".join([f"{m[0].upper()} {m[1]}" for m in cloud_matches]) if cloud_matches else "XXX"
 
           # RWY et condition
@@ -68,28 +112,38 @@ jobs:
           rwy_cond_match = re.search(r"touchdown.*?(\d+)[^\d]+midpoint.*?(\d+)[^\d]+stop end.*?(\d+)", raw, re.IGNORECASE)
           rwy_cond = f"TDZ {rwy_cond_match.group(1)}/MID {rwy_cond_match.group(2)}/END {rwy_cond_match.group(3)}" if rwy_cond_match else "XXX"
 
-          # Temp / Dew
+          # Température / Dew
           temperature = extract(r"[tT]emperature[, ]+(\d+)", raw)
           dewpoint = extract(r"[dD]ew point[, ]+(\d+)", raw)
 
           # QNH
           qnh = extract(r"[qQ][nN][hH][ ,]?(\d{3,4})", raw)
 
-          # Construire message FMS
+          # --- Validation METAR ---
+          metar_data = fetch_metar()
+          data = {
+              "wind": wind,
+              "visibility": visibility,
+              "temperature": temperature,
+              "dewpoint": dewpoint,
+              "qnh": qnh
+          }
+          data = validate(data, metar_data)
+
+          # --- Construire message FMS ---
           fms_text = (
               f"EETN ATIS INFO {atis_letter} {atis_time}Z. "
-              f"{wind} {visibility} {clouds} "
+              f"{data['wind']} {data['visibility']} {clouds} "
               f"RWY {runway} IN USE. "
           )
-          if rwy_cond != "XXX":
+          if rwy_cond!="XXX":
               fms_text += f"RWY COND {rwy_cond}. "
-          fms_text += f"TEMP {temperature}/{dewpoint}C. "
-          fms_text += f"A{qnh}. "
+          fms_text += f"TEMP {data['temperature']}/{data['dewpoint']}C. "
+          fms_text += f"A{data['qnh']}. "
 
-          # Sauvegarde
           with open(output_file, "w", encoding="utf-8") as f:
               f.write(fms_text + "\n")
 
-          print("✅ ATIS format FMS généré : ", output_file)
+          print("✅ ATIS FMS complet généré :", output_file)
           print(fms_text)
           PYCODE
