--- a/.github/workflows/whisper_transcribe.yml
+++ b/.github/workflows/whisper_transcribe.yml
@@ -79,13 +79,15 @@ jobs:
           print(text)
           PYCODE
 
-      # Commit et push la transcription (forcé pour écraser)
+      # Commit et push la transcription
       - name: Commit et push la transcription
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
+          # Ajouter uniquement le fichier texte
           git add atis_tallinn.txt
           git commit -m "Mise à jour transcription ATIS ($(date +'%Y-%m-%d %H:%M'))" || echo "Rien à commit"
-          git push origin main --force
+          git pull --rebase origin main
+          git push origin main
