--- a/.github/workflows/decode_atis.yml
+++ b/.github/workflows/decode_atis.yml
@@ -1,12 +1,13 @@
 name: 3_decode_atis
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '25,55 * * * *'  # toutes les 30 minutes, ajustable
+  workflow_run:
+    workflows: ["whisper_transcribe"]
+    types:
+      - completed
 
 jobs:
-  format-atis-fms:
+  decode:
     runs-on: ubuntu-22.04
 
     steps:
