--- a/.github/workflows/whisper_transcribe.yml
+++ b/.github/workflows/whisper_transcribe.yml
@@ -3,7 +3,7 @@ name: 2_transcription
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["record-atis"]
+    workflows: ["record_atis"]
     types:
       - completed
 
@@ -91,7 +91,7 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           # Ajouter uniquement le fichier texte
-          git add atis_tallinn.txt
+          git add atis_transcribed.txt
           git commit -m "Mise à jour transcription ATIS ($(date +'%Y-%m-%d %H:%M'))" || echo "Rien à commit"
           git pull --rebase origin main
           git push origin main
