--- a/.github/workflows/decode_atis.yml
+++ b/.github/workflows/decode_atis.yml
@@ -3,7 +3,7 @@ name: 3_decode_atis
 on:
   workflow_dispatch:   
   workflow_run:
-    workflows: ["whisper_transcribe"]
+    workflows: ["transcribe_atis"]
     types:
       - completed
 
