--- a/.github/workflows/record_atis.yml
+++ b/.github/workflows/record_atis.yml
@@ -2,41 +2,79 @@ name: 1_enregistrement_atis
 
 on:
   schedule:
-    - cron: '22,52 * * * *'
+    - cron: "22,52 * * * *"
   workflow_dispatch:
 
 jobs:
   record_atis:
     runs-on: ubuntu-22.04
     permissions:
-      contents: write  # autorise le push vers le dépôt
+      contents: write
 
     steps:
+      # -----------------------------
+      # 1. Checkout
+      # -----------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      # -----------------------------
+      # 2. Install ffmpeg + curl
+      # -----------------------------
       - name: Installer ffmpeg et curl
         run: |
           sudo apt-get update -qq
           sudo apt-get install -y ffmpeg curl
 
-      - name: Enregistrer le flux ATIS en MP3
+      # -----------------------------
+      # 3. Record ATIS stream
+      # -----------------------------
+      - name: Enregistrer le flux ATIS en MP3 (120 sec)
         run: |
+          echo "🎙 Enregistrement du flux LiveATC pour 120 secondes..."
           curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" \
-          "https://s1-fmt2.liveatc.net/eetn2_atis" \
-          | ffmpeg -i pipe:0 -t 120 -y atis_recorded.mp3
+            "https://s1-fmt2.liveatc.net/eetn2_atis" \
+          | ffmpeg -hide_banner -loglevel error -i pipe:0 -t 120 -y atis_recorded.mp3
 
+          echo "Durée MP3 :"
+          ffmpeg -i atis_recorded.mp3 2>&1 | grep "Duration"
+
+      # -----------------------------
+      # 4. Convert MP3 → WAV
+      # -----------------------------
       - name: Convertir MP3 en WAV mono 16kHz
         run: |
-          ffmpeg -y -i atis_tallinn.mp3 -ac 1 -ar 16000 atis_recorded.wav
-          ls -lh atis_recorded.*
+          ffmpeg -y -i atis_recorded.mp3 -ac 1 -ar 16000 atis_recorded.wav
 
+          echo "Durée WAV :"
+          ffmpeg -i atis_recorded.wav 2>&1 | grep "Duration"
+
+      # -----------------------------
+      # 5. Validate audio duration
+      # -----------------------------
+      - name: Vérifier la durée audio minimale
+        run: |
+          DURATION=$(ffprobe -v error -show_entries format=duration -of default=noprint_wrappers=1:nokey=1 atis_recorded.wav)
+          echo "Durée détectée : $DURATION sec"
+
+          # Fail if file is too short (< 100 sec) → indicates truncated LiveATC stream
+          if (( $(echo "$DURATION < 100" | bc -l) )); then
+            echo "❌ Fichier trop court → enregistrement incomplet"
+            exit 1
+          fi
+
+      # -----------------------------
+      # 6. Commit & push only if changed
+      # -----------------------------
       - name: Commit et push du fichier audio
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
+
           git add atis_recorded.mp3 atis_recorded.wav
-          git commit -m "Mise à jour de l’audio ATIS ($(date '+%Y-%m-%d %H:%M'))" || echo "Aucune modification à commit"
+          git commit -m "Mise à jour de l’audio ATIS ($(date '+%Y-%m-%d %H:%M'))" \
+            || echo "Aucune modification à commit"
+
           git push
