--- a/.github/workflows/record_atis.yml
+++ b/.github/workflows/record_atis.yml
@@ -21,23 +21,23 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       # -----------------------------
-      # 2. Install ffmpeg + curl
+      # 2. Install ffmpeg + curl + bc
       # -----------------------------
-      - name: Installer ffmpeg et curl
+      - name: Installer ffmpeg, curl et bc
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -y ffmpeg curl
+          sudo apt-get install -y ffmpeg curl bc
 
       # -----------------------------
       # 3. Record ATIS stream
       # -----------------------------
       - name: Enregistrer le flux ATIS en MP3 (120 sec)
         run: |
-          echo "🎙 Enregistrement du flux LiveATC pour 120 secondes..."
-          curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" \
-            "https://s1-fmt2.liveatc.net/eetn2_atis" \
+          echo "🎙 Enregistrement du flux ATIS pour 120 secondes..."
+          curl -s -A "Mozilla/5.0" \
+            "https://icecast.kobly.com/eetn2_atis" \
           | ffmpeg -hide_banner -loglevel error -i pipe:0 -t 120 -y atis_recorded.mp3
-
+          
           echo "Durée MP3 :"
           ffmpeg -i atis_recorded.mp3 2>&1 | grep "Duration"
 
@@ -47,7 +47,7 @@ jobs:
       - name: Convertir MP3 en WAV mono 16kHz
         run: |
           ffmpeg -y -i atis_recorded.mp3 -ac 1 -ar 16000 atis_recorded.wav
-
+          
           echo "Durée WAV :"
           ffmpeg -i atis_recorded.wav 2>&1 | grep "Duration"
 
@@ -59,7 +59,7 @@ jobs:
           DURATION=$(ffprobe -v error -show_entries format=duration -of default=noprint_wrappers=1:nokey=1 atis_recorded.wav)
           echo "Durée détectée : $DURATION sec"
 
-          # Fail if file is too short (< 100 sec) → indicates truncated LiveATC stream
+          # Fail if file is too short (< 100 sec)
           if (( $(echo "$DURATION < 100" | bc -l) )); then
             echo "❌ Fichier trop court → enregistrement incomplet"
             exit 1
